<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_proy"
        card_view:cardElevation="@dimen/card_elevation"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardUseCompatPadding="true"
        android:animateLayoutChanges="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/card_text_padding"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/nombre_proyecto"
                    android:textColor="@color/PrimaryText"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/text_separator"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/fechas_proyecto"
                    android:textColor="@color/SecondayText"
                    android:layout_marginBottom="@dimen/text_separator"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/descripcion_proyecto"
                    android:textColor="@color/SecondayText"
                    android:layout_marginBottom="@dimen/text_separator"
                    android:textStyle="bold"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/divides_margin"
                android:layout_marginBottom="@dimen/divides_margin"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/DividerColor"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_gravity="center"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_equalizer"
                        android:contentDescription="@string/imgContentDescripcion"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/Metas"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_estados"
                        android:textColor="@color/PrimaryText"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/realizadoChart"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/ly_circular_size"
                        android:layout_height="@dimen/ly_circular_size">
                    </com.github.mikephil.charting.charts.PieChart>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/Procesosrealizado"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_estados"
                        android:textColor="@color/PrimaryText"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/transcurridosChart"
                        android:layout_gravity="center"
                        android:layout_width="@dimen/ly_circular_size"
                        android:layout_height="@dimen/ly_circular_size">
                    </com.github.mikephil.charting.charts.PieChart>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/Diastranscurridos"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_estados"
                        android:textColor="@color/PrimaryText"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_marginTop="@dimen/divides_margin"
                android:layout_marginBottom="@dimen/divides_margin"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/DividerColor"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:weightSum="1"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/viewEstadoColor"
                        android:layout_width="@dimen/ly_circular_size"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/ly_circular_size"
                        android:background="@drawable/drw_acronym"></View>

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/estadoD"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_estados"
                        android:textColor="@color/PrimaryText"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:id="@+id/LyPumpunear"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_gravity="center"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_gavel"
                        android:contentDescription="@string/imgContentDescripcion"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/punpunear"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_estados"
                        android:textColor="@color/PrimaryText"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_gravity="center"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_calendar"
                        android:contentDescription="@string/imgContentDescripcion"></ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/agendar"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_size_estados"
                        android:textColor="@color/PrimaryText"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/divides_margin"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/txt_actualizacion_meta"
                    android:layout_weight="0.92"
                    android:layout_gravity="center"
                    android:textColor="@color/TextResaltar"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_estados"
                    android:layout_height="wrap_content" />


                <ImageView
                    android:id="@+id/expand_collapse"
                    android:layout_weight="0.08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_key_down"
                    android:contentDescription="@string/imgContentDescripcion" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:id="@+id/LyEstadoMetas"
                android:visibility="gone"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textColor="@color/PrimaryText"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:text="@string/estadometas"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="0.8">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/MetasChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </com.github.mikephil.charting.charts.PieChart>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>